# azure-function-axum

./: .funcignore  .gitignore  Cargo.toml  Makefile
infrastructure/: function.bicep  main.bicep
src/: main.rs
src/functions/: greet.rs  mod.rs  timer.rs
