[package]
name = "handler"
version = "0.1.0"
authors = ["Damien Pontifex <damien.pontifex@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
axum = { version = "0.5", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.61"
mime = "0.3.16"
chrono = { version = "0.4.19", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
tracing-subscriber = "0.3"
